fixed header overflow

--- a/drupal/sites/all/themes/helloworld/scss/main.scss
+++ b/drupal/sites/all/themes/helloworld/scss/main.scss
@@ -58,7 +58,7 @@
   background: url(../images/header-bg.png);
 }
 .navbar {
-  overflow: hidden;
+//  overflow: hidden;
 }
 h2 {
   color: $hot_pink;
